# flutter-dart-ffi-dlib-opencv

./: .gitignore  LICENSE  README.1st.md  README.md  pubspec.yaml  setupdlibopencv.sh
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cppLibs/: CMakeLists.txt  dlib.cpp
android/app/src/main/cppLibs/dlib/include/dlib/dlib/image_loader/: jpeg_loader.h
android/app/src/main/kotlin/dunp/inovation/dartffi_dlib_opencv/: MainActivity.kt
assets/: chunom_metadata.json
dlibopencvbuild/: README.md  setupdlibopencv.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/interop/: dlib.cpp  dlib.dart  dylibloader.dart  onnx2tflite.py  opencv.dart  tflitepredict.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: testdlib.dart  widget_test.dart
test/build4pc/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
